update btn to solve btn visibility issue in iphone

--- a/src/routes/Login.scss
+++ b/src/routes/Login.scss
@@ -19,20 +19,12 @@
     max-width: 250px;
     justify-content: space-between;
     .btn-app {
-        height: 3rem;
-        width: 3rem;
+        @include p(1);
         font-size: 1.5rem;
+        line-height: 0;
+        vertical-align: middle;
         border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         color: $white;
-
-        svg {
-            font-size: 1.5rem;
-            width: 1.5rem;
-            height: 1.5rem;
-        }
 
         &--google {
             background-color: $white;
